# diffusion-memory

./: .gitignore  README.md  main.py  pyproject.toml
agents/: diffusion_memory_agent.py
benchmark-results/: longmemeval-pacabench-2026-04-28.md
lib/: __init__.py  diffusion_block.py  diffusion_graph.py  diffusion_memory.py  diffusion_simulator.py  importance_model.py  io_utils.py  plotting.py  run_utils.py
runs/diffusion-memory-longmemeval-5QLL1A0D/: metadata.json  pacabench.yaml  results.jsonl
tests/: test_diffusion_memory_agent.py  test_diffusion_regression.py
